# Developer-Code-Intelligence-Agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  devagent.bat  devagent.py  index.html  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
app/: agent.py  llm.py  memory.py  planner.py  reviewer.py  sandbox.py  state.py
benchmarks/divide_by_zero/: calculator.py  task.txt  test_calculator.py
benchmarks/edge_case/: batch.py  task.txt  test_batch.py
benchmarks/import_bug/: app.py  math_utils.py  task.txt  test_app.py
benchmarks/missing_validation/: task.txt  test_user_service.py  user_service.py
benchmarks/syntax_error/: parser.py  task.txt  test_parser.py
demo_project/: calculator.py  requirements.txt  test_calculator.py
demo_project/demo_project/: fib.py
devagent/: cli.py
devagent/app/: __init__.py  agent.py  llm.py  memory.py  patcher.py  planner.py  reviewer.py  sandbox.py  state.py
devagent/tools/: __init__.py  benchmark_runner.py  env_detector.py  file_map.py  file_ops.py  git_tools.py  linter.py  search.py  semantic_search.py  test_runner.py
devagent/utils/: __init__.py  ast_utils.py  config.py  environment.py  logger.py  metrics.py  safety.py
docs/: USER_GUIDE.md  benchmarks.md  demo_guide.md  troubleshooting.md
frontend/: docs.html  download.html  index.html  package-lock.json  style.css
frontend_legacy/: benchmarks.html  changelog.html
scratch/: verify_env.py
scripts/: run_validation.py
tools/: benchmark_runner.py  semantic_search.py  surgical_patcher.py  test_runner.py
utils/: logger.py  metrics.py
validation/reports/: benchmark_summary.json  results.json
validation/tasks/: azure-auth.json  doit.json  student-projects.json  todoism.json
(+10 files in other folders)
