[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devagent-cli"
version = "3.1.0"
description = "Local autonomous coding agent powered by Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Vedant Jadhav"}
]
keywords = ["ai", "agent", "coding", "ollama", "local", "devagent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rich",
  "pytest",
  "flake8",
  "sentence-transformers",
  "faiss-cpu",
  "requests",
]

[project.scripts]
devagent = "devagent.cli:main"

[tool.setuptools]
packages = ["devagent", "devagent.app", "devagent.tools", "devagent.utils"]
