[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devagent-cli"
version = "3.2.3"
description = "Professional Local autonomous coding agent powered by Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Vedant Jadhav"}
]
keywords = ["ai", "agent", "coding", "ollama", "local", "devagent", "devagent-cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
  "rich",
  "pytest",
  "requests",
  "ollama",
  "faiss-cpu",
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers",
]
lint = [
  "flake8",
]

[project.scripts]
devagent = "devagent.cli:main"

[tool.setuptools]
packages = ["devagent", "devagent.app", "devagent.tools", "devagent.utils"]
